Handle overflow to prevent shifting page when filtering

--- a/assets/application.css
+++ b/assets/application.css
@@ -2,6 +2,10 @@ html, body {
   min-height: 100%;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 body {
   background-color: #F0F8FF;
 }
